Rearranged responses to show rules first. Moved the default answer group to be part of the rest of the answer group stack (and removed the fallbacks section altogether). Renamed the 'Responses' header to "Oppia's Responses". Renamed the default answer group rule summary to "If Oppia doesn't understand". Renamed the "If the answer provided..." header to "If the learner's answer...". Renamed '+ Add New Response' to '+ Add New Oppia Response'. Hid the answer group headers when the group is expanded, with the exception of the default answer group. Defaulted the editor to not have an answer group open, by default. The empty answer group header also still shows the destination portion of the answer group summary. Updated answer group header bars to be clickable after the answer group is expanded, allowing it to be collapsed again. Fixed the jumping of the browser scrollbar when switching answer groups.

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -1002,10 +1002,6 @@ pre.oppia-pre-wrapped-text {
   text-decoration: underline;
 }
 
-.oppia-answer-header {
-  padding-top: 16px;
-}
-
 .oppia-add-interaction-button,
 .oppia-add-response-button {
   background-color: rgba(5,140,166,0.9);
@@ -1136,7 +1132,6 @@ pre.oppia-pre-wrapped-text {
   background: rgba(5,140,166,0.1);
   border-right: 0;
   color: #333;
-  cursor: default;
 }
 
 .oppia-default-rule-tab {
